--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,7 @@
       "source": "**",
       "destination": "/index.html"
     } ],
-    "public": "build",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       ".env",
