--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "kevin-s-discord-clone"
-  }
+    "default": "kevindiscordclone",
+    "kevindiscordclone": "kevindiscordclone"
+  },
+  "targets": {},
+  "etags": {}
 }
